--- a/scripts/automation/packages/system/serverconfig.ini
+++ b/scripts/automation/packages/system/serverconfig.ini
@@ -14,21 +14,21 @@ print = 192.168.100.12
 mail = 192.168.100.4
 file = 192.168.56.118
 web = 192.168.56.116
-seafile = 192.168.56.101 ; REPLACE WITH YOUR SEAFILE SERVER IP  
-seaFolder = 101dd8f7-9af4-45f6-94c9-d81c095b53f1 ; Replace with your folder id
+seafile = 192.168.56.101
+seaFolder = 101dd8f7-9af4-45f6-94c9-d81c095b53f1
 
 [100]
 print = 192.168.100.12
 mail = 192.168.100.4
 file = 192.168.56.118
 web = 192.168.56.116
-seafile = 192.168.56.101; REPLACE WITH YOUR SEAFILE SERVER IP 
-seaFolder = 101dd8f7-9af4-45f6-94c9-d81c095b53f1 ; Replace with your folder id
+seafile = 192.168.56.101
+seaFolder = 101dd8f7-9af4-45f6-94c9-d81c095b53f1
 
 [220]
 print = 192.168.100.12
 mail = 192.168.100.4
 file = 192.168.56.118
 web = 192.168.56.116
-seafile = 192.168.56.101; REPLACE WITH YOUR SEAFILE SERVER IP 
-seaFolder = 15028ebd-4600-4c8f-8aaf-3b0dfaa6c091 ; Replace with your folder id
+seafile = 192.168.56.101
+seaFolder = 15028ebd-4600-4c8f-8aaf-3b0dfaa6c091
