--- a/scripts/automation/packages/browsing/browser.ini
+++ b/scripts/automation/packages/browsing/browser.ini
@@ -10,7 +10,7 @@
 ; CONTAINS ONLY THREE EXAMPLES
 
 [internWeb]
-url = http://192.168.100.3
+url = http://192.168.56.115
 tag_name = a 
 searc_query = 0 
 search = 0
@@ -40,3 +40,16 @@ search = 0
 click = 1
 popup = 0
 ;button = none
+
+[youtube]
+url = https://www.youtube.com/
+tag_name = input
+search_query = 0
+;login_name = none
+;password = none
+;login = 0
+search = 1
+click = 1
+popup = 0
+;button = none
+
