--- a/docker/linux_client/Dockerfile
+++ b/docker/linux_client/Dockerfile
@@ -1,6 +1,6 @@
 # Usage: 
-## Build: docker build -t fileserver --network=host .
-## Run ssh: docker run --cap-add=NET_ADMIN -it --network="pnet" -p 446:445 fileserver
+## Build: docker build -t client --network=host .
+## Run ssh: docker run --cap-add=NET_ADMIN -it --network="pnet" -p 446:445 client
 ## Create network: docker network create --subnet "192.168.1.0/24" --ip-range "192.168.1.0/24" --gateway "192.168.1.125" --attachable -o "com.docker.network.bridge.default_bridge"="true" -o "com.docker.network.brigde.default_bridge"="true" -o "com.docker.network.bridge.enable_icc"="true" -o "com.docker.network.bridge.enable_ip_masquerade"="true" -o "com.docker.network.bridge.host_binding_ipv4"="0.0.0.0" -o "com.docker.network.driver.mtu"="1500" pnet
 ## Install basic tools: apt install nano iptables net-tools iproute2 iputils-ping -y
 
@@ -18,14 +18,14 @@ RUN mkdir /home/debian
 COPY backup.py /home/debian/
 
 # Start setup
-COPY setup.sh .
-RUN chmod +x setup.sh\
-&& ./setup.sh
+#COPY setup.sh .
+#RUN chmod +x setup.sh\
+#&& ./setup.sh
 
 # Start samba and dummy files on start
-COPY onboot.sh /home
-RUN chmod +x /home/onboot.sh
-CMD ["./home/onboot.sh"]
+#COPY onboot.sh /home
+#RUN chmod +x /home/onboot.sh
+#CMD ["./home/onboot.sh"]
 
 # For conecting via Open SSL
 EXPOSE 22
