--- a/docker/linux_client/Dockerfile
+++ b/docker/linux_client/Dockerfile
@@ -18,14 +18,14 @@ RUN mkdir /home/debian
 COPY backup.py /home/debian/
 
 # Start setup
-#COPY setup.sh .
-#RUN chmod +x setup.sh\
-#&& ./setup.sh
+COPY setup.sh .
+RUN chmod +x setup.sh\
+&& ./setup.sh
 
 # Start samba and dummy files on start
-#COPY onboot.sh /home
-#RUN chmod +x /home/onboot.sh
-#CMD ["./home/onboot.sh"]
+COPY onboot.sh /home
+RUN chmod +x /home/onboot.sh
+CMD ["./home/onboot.sh"]
 
 # For conecting via Open SSL
 EXPOSE 22
