--- a/docker/mail_server/Dockerfile
+++ b/docker/mail_server/Dockerfile
@@ -25,14 +25,14 @@ COPY mailscripts/postfix_config.sh /tmp/mailsetup
 COPY mailscripts/dovecot_config.sh /tmp/mailsetup
 
 # Start setup
-#COPY setup.sh .
-#RUN chmod +x setup.sh\
-#&& ./setup.sh
+COPY setup.sh .
+RUN chmod +x setup.sh\
+&& ./setup.sh
 
 # Start samba and dummy files on start
-#COPY onboot.sh /home
-#RUN chmod +x /home/onboot.sh
-#CMD ["./home/onboot.sh"]
+COPY onboot.sh /home
+RUN chmod +x /home/onboot.sh
+CMD ["./home/onboot.sh"]
 
 # For conecting via Open SSL
 EXPOSE 22
