--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,15 @@
 version: "3.8"
 
 
-# Define already created network
-## docker network create -d ipvlan --subnet=192.168.100.0/24 --subnet=192.168.200.0/24 --subnet=192.168.210.0/24 --subnet=192.168.220.0/24 --gateway=192.168.100.225 --gateway=192.168.200.225 --gateway=192.168.210.225 --gateway=192.168.220.225 -o ipvlan_mode=l3 -o parent=eth0 cidds-ipvlan
-## docker network create -d ipvlan --subnet=192.168.100.0/24 --subnet=192.168.200.0/24 --subnet=192.168.210.0/24 --subnet=192.168.220.0/24 --gateway=192.168.0.118 -o ipvlan_mode=l3 -o parent="Wi-Fi" cidds-ipvlan
 networks:
-  cidds-internal: 
-    name: cidds-ipvlan
+  servernet: 
+    name: cidds100
+  managementnet:
+    name: cidds200
+  officenet:
+    name: cidds210
+  developernet:
+    name: cidds220
 
 
 # Define the machines on its subnet
@@ -17,28 +20,28 @@ services:
     container_name : ${FILE}
     restart: always
     networks:
-      cidds-internal:
+      servernet:
         ipv4_address: 192.168.100.1
   mailserver:
     image: ${REPOSITORY}:${MAIL}
     container_name : ${MAIL}
     restart: always
     networks:
-      cidds-internal:
+      servernet:
         ipv4_address: 192.168.100.2
   webserver:
     image: ${REPOSITORY}:${WEB}
     container_name : ${WEB}
     restart: always
     networks:
-      cidds-internal:
+      servernet:
         ipv4_address: 192.168.100.3
   backupserver:
     image: ${REPOSITORY}:${BACKUP}
     container_name : ${BACKUP}
     restart: always
     networks:
-      cidds-internal:
+      servernet:
         ipv4_address: 192.168.100.4
 
 
@@ -48,7 +51,7 @@ services:
     container_name : M${PRINTER}
     restart: always
     networks:
-      cidds-internal:
+      managementnet:
   
         ipv4_address: 192.168.200.1
   Mclient1:
@@ -63,7 +66,7 @@ services:
       - ${BACKUP}
       - M${PRINTER}
     networks:
-      cidds-internal:
+      managementnet:
         ipv4_address: 192.168.200.2
   #client2:
   Mclient2:
@@ -78,7 +81,7 @@ services:
       - ${BACKUP}
       - M${PRINTER}
     networks:
-      cidds-internal:
+      managementnet:
         ipv4_address: 192.168.200.3
   #client3:
   Mclient3:
@@ -93,7 +96,7 @@ services:
       - ${BACKUP}
       - M${PRINTER}
     networks:
-      cidds-internal:
+      managementnet:
         ipv4_address: 192.168.200.4
   #client4:
   Mclient4:
@@ -108,7 +111,7 @@ services:
       - ${BACKUP}
       - M${PRINTER}
     networks:
-      cidds-internal:
+      managementnet:
         ipv4_address: 192.168.200.5
 
 
@@ -118,7 +121,7 @@ services:
     container_name : O${PRINTER}
     restart: always
     networks:
-      cidds-internal:
+      officenet:
         ipv4_address: 192.168.210.1
   Oclient1:
     image: ${REPOSITORY}:${LCLIENT}
@@ -132,7 +135,7 @@ services:
       - ${BACKUP}
       - O${PRINTER}
     networks:
-      cidds-internal:
+      officenet:
         ipv4_address: 192.168.210.2
   #Oclient2:
   Oclient2:
@@ -147,7 +150,7 @@ services:
       - ${BACKUP}
       - M${PRINTER}
     networks:
-      cidds-internal:
+      officenet:
         ipv4_address: 192.168.210.3
   
 
@@ -157,7 +160,7 @@ services:
     container_name : D${PRINTER}
     restart: always
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.1
   Dclient1:
     image: ${REPOSITORY}:${LCLIENT}
@@ -171,7 +174,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.2
   #Dclient2:
   Dclient2:
@@ -186,7 +189,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.3
   #Dclient3:
   Dclient3:
@@ -201,7 +204,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.4
   #Dclient4:
   Dclient4:
@@ -216,7 +219,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.5
   #Dclient5:
   Dclient5:
@@ -231,7 +234,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.6
   #Dclient6:
   Dclient6:
@@ -246,7 +249,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.7
   #Dclient7:
   Dclient7:
@@ -261,7 +264,7 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.8
   #Dclient8:
   Dclient8:
@@ -276,5 +279,5 @@ services:
       - ${BACKUP}
       - D${PRINTER}
     networks:
-      cidds-internal:
+      developernet:
         ipv4_address: 192.168.220.9
