--- a/scripts/automation/packages/system/serverconfig.ini
+++ b/scripts/automation/packages/system/serverconfig.ini
@@ -4,23 +4,30 @@
 ;       Active IPs       ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-
 [backup]
-ip = 192.168.56.124
+ip = 192.168.100.4
 
 ; Specify the IP for each Server for every Subnet
-[0]
-print = 172.17.0.5
-mail = 192.168.56.114
-file = 192.168.56.118
-web = 192.168.56.116
+[200]
+print = 192.168.200.1
+mail = 192.168.100.1
+file = 192.168.100.2
+web = 192.168.100.3
 seafile = 192.168.56.123
 seaFolder = 01684009-63a2-4239-9326-acc6bb937cfa
 
-[65]
-print = 172.17.0.5
-mail = 192.168.56.114
-file = 192.168.56.118
-web = 192.168.56.116
+[210]
+print = 192.168.210.1
+mail = 192.168.100.1
+file = 192.168.100.2
+web = 192.168.100.3
+seafile = 192.168.56.123
+seaFolder = 01684009-63a2-4239-9326-acc6bb937cfa
+
+[220]
+print = 192.168.220.1
+mail = 192.168.100.1
+file = 192.168.100.2
+web = 192.168.100.3
 seafile = 192.168.56.123
 seaFolder = 01684009-63a2-4239-9326-acc6bb937cfa
