--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,12 @@ networks:
     external: true
 
 
+# Define mount point to get the log of linuxclients
+volumes:
+  myhost:
+    external: true
+
+
 # Define the machines on its subnet
 services:
   ## Server Subnet
@@ -64,7 +70,8 @@ services:
     networks:
       managementnet:
         ipv4_address: 192.168.200.2
-
+    volumes:
+      - myhost:/home/debian/logs
   ## Office Subnet
   Oclient1:
     image: ${REPOSITORY}:${LCLIENT}
@@ -79,7 +86,8 @@ services:
     networks:
       officenet:
         ipv4_address: 192.168.210.2
-
+    volumes:
+      - myhost:/home/debian/logs
   Dclient1:
     image: ${REPOSITORY}:${LCLIENT}
     container_name: D${LCLIENT}1
@@ -93,3 +101,5 @@ services:
     networks:
       developernet:
         ipv4_address: 192.168.220.2
+    volumes:
+      - myhost:/home/debian/logs
