--- a/scripts/automation/packages/system/config.ini
+++ b/scripts/automation/packages/system/config.ini
@@ -1,4 +1,4 @@
-; Every client downloads this file ONLY ONCE during the installation of the client (sudo python readIni.py) 
+=; Every client downloads this file ONLY ONCE during the installation of the client (sudo python readIni.py) 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;      Network-Infos     ;
