Create new config file for docker networking

--- a/network/internal/docker-compose.yml
+++ b/network/internal/docker-compose.yml
@@ -1,28 +1,6 @@
 version: "3.7"
 
 
-# Define networks to use
-networks:
-  servernet: 
-    name: cidds100
-    external: true
-  managementnet:
-    name: cidds200
-    external: true
-  officenet:
-    name: cidds210
-    external: true
-  developernet:
-    name: cidds220
-    external: true
-
-
-# Define mount point to get the log of linuxclients
-#volumes:
-#  myhost:
-#    external: true
-
-
 # Define the machines on its subnet
 services:
   ## Server Subnet
@@ -30,30 +8,22 @@ services:
     image: ${REPOSITORY}:${MAILSERVER}
     container_name: ${MAILSERVER}
     restart: always
-    networks:
-      servernet:
-        ipv4_address: 192.168.100.1
+    network_mode: bridge
   fileserver:
     image: ${REPOSITORY}:${FILE}
     container_name: ${FILE}
     restart: always
-    networks:
-      servernet:
-        ipv4_address: 192.168.100.2
+    network_mode: bridge
   webserver:
     image: ${REPOSITORY}:${WEB}
     container_name: ${WEB}
     restart: always
-    networks:
-      servernet:
-        ipv4_address: 192.168.100.3
+    network_mode: bridge
   backupserver:
     image: ${REPOSITORY}:${BACKUP}
     container_name: ${BACKUP}
     restart: always
-    networks:
-      servernet:
-        ipv4_address: 192.168.100.4
+    network_mode: bridge
 
 
   ## Management Subnet
@@ -67,11 +37,7 @@ services:
       - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-    networks:
-      managementnet:
-        ipv4_address: 192.168.200.2
-    #volumes:
-    #  - myhost:/home/debian/logs
+    network_mode: bridge
   ## Office Subnet
   Oclient1:
     image: ${REPOSITORY}:${LCLIENT}
@@ -83,11 +49,8 @@ services:
       - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-    networks:
-      officenet:
-        ipv4_address: 192.168.210.2
-    #volumes:
-    #  - myhost:/home/debian/logs
+    network_mode: bridge
+  ## Developer Subnet
   Dclient1:
     image: ${REPOSITORY}:${LCLIENT}
     container_name: D${LCLIENT}1
@@ -98,8 +61,4 @@ services:
       - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-    networks:
-      developernet:
-        ipv4_address: 192.168.220.2
-    #volumes:
-    #  - myhost:/home/debian/logs
+    network_mode: bridge
