--- a/network/internal/docker-compose.yml
+++ b/network/internal/docker-compose.yml
@@ -20,8 +20,8 @@ networks:
 services:
   ## Server Subnet
   mailserver:
-    image: ${REPOSITORY}:${MAIL}
-    container_name: ${MAIL}
+    image: ${REPOSITORY}:${MAILSERVER}
+    container_name: ${MAILSERVER}
     restart: always
     networks:
       servernet:
@@ -58,10 +58,9 @@ services:
     privileged: true
     depends_on: 
       - ${FILE}
-      - ${MAIL}
+      - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-      - Mprinter
     networks:
       managementnet:
         ipv4_address: 192.168.200.2
@@ -72,10 +71,9 @@ services:
     privileged: true
     depends_on: 
       - ${FILE}
-      - ${MAIL}
+      - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-      - Oprinter
     networks:
       officenet:
         ipv4_address: 192.168.210.2
@@ -86,10 +84,9 @@ services:
     privileged: true
     depends_on: 
       - ${FILE}
-      - ${MAIL}
+      - ${MAILSERVER}
       - ${WEB}
       - ${BACKUP}
-      - Dprinter
     networks:
       developernet:
         ipv4_address: 192.168.220.2
