--- a/network/internal/.env
+++ b/network/internal/.env
@@ -4,6 +4,6 @@ WEB=webserver
 BACKUP=backupserver
 FILE=fileserver
 PRINTER=printerserver
-LCLIENT=linuxclient
+LCLIENT=linuxclient2
 WCLIENT=windowsclient
 
