--- a/scripts/automation/packages/system/configs/iplistconfig.conf
+++ b/scripts/automation/packages/system/configs/iplistconfig.conf
@@ -18,4 +18,8 @@
 192.168.220.12=developer
 192.168.220.13=attacker
 192.168.220.14=attacker
+192.168.50.3=attacker
+192.168.50.4=attacker
+192.168.50.5=attacker
+
 
