--- a/network/test_1/.env
+++ b/network/test_1/.env
@@ -1,11 +1,11 @@
-REPOSITORY=mdewinged/cidds
-MAILSERVER=mailserver
-WEB=webserver
-BACKUP=backupserver
-FILE=fileserver
-PRINTER=printerserver
-LCLIENT=linuxclient2
-WCLIENT=windowsclient
-SEAFILE=seafileserver
-INTERNAL=br-int
-EXTERNAL=br-ex
+export REPOSITORY=mdewinged/cidds
+export MAILSERVER=mailserver
+export WEB=webserver
+export FILE=fileserver
+export BACKUP=backupserver
+export PRINTER=printerserver
+export LCLIENT=linuxclient2
+export WCLIENT=windowsclient
+export SEAFILE=seafileserver
+export INTERNAL=br-int
+export EXTERNAL=br-ex
