--- a/scripts/automation/packages/system/serverconfig.ini
+++ b/scripts/automation/packages/system/serverconfig.ini
@@ -39,4 +39,4 @@ seaFolder = 01684009-63a2-4239-9326-acc6bb937cfa
 [50]
 seafile = 192.168.50.1
 seaFolder = 01684009-63a2-4239-9326-acc6bb937cfa
-webserver = 192.168.50.2
+web = 192.168.50.2
