--- a/scripts/automation/packages/browsing/browser.ini
+++ b/scripts/automation/packages/browsing/browser.ini
@@ -1,21 +1,3 @@
-;
-; Copyright (C) 2022 Alexandre Mitsuru Kaihara
-;
-;    This program is free software: you can redistribute it and/or modify
-;    it under the terms of the GNU General Public License as published by
-;    the Free Software Foundation, either version 3 of the License, or
-;    (at your option) any later version.
-;
-;    This program is distributed in the hope that it will be useful,
-;    but WITHOUT ANY WARRANTY; without even the implied warranty of
-;    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;    GNU General Public License for more details.
-;
-;    You should have received a copy of the GNU General Public License
-;    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-;
-
-
 ; actions: search, click, login
 ; yes=1, no=0
 ; if search and click is both on, search will be executed first
@@ -26,6 +8,14 @@
 ; ATTENTION: If you add an entry here, pls add the name of the section
 ;            to pbrowsing.txt for private or to bbrowsing.txt for business browsing
 ; CONTAINS ONLY THREE EXAMPLES
+
+[internWeb]
+url = http://192.168.56.115
+tag_name = a 
+searc_query = 0 
+search = 0
+click = 1
+popup = 0
 
 [google]
 url = http://www.google.de
