--- a/docker/controller/Dockerfile
+++ b/docker/controller/Dockerfile
@@ -18,7 +18,7 @@
 
 FROM ubuntu:20.04
 RUN apt update \
-&&  RUNLEVEL=1 apt install -y --no-install-recommends sudo net-tools iproute2 iputils-ping python3 python3-pip\
+&&  RUNLEVEL=1 apt install -y --no-install-recommends sudo net-tools iproute2 iputils-ping python3 python3-pip iptables nano\
 && python3 -m pip install --upgrade pip \
 && pip3 install ryu eventlet==0.30.2 pandas \
 && apt-get -o Dpkg::Options::="--force-confmiss" install --reinstall netbase
